# tp-lab04

./: README.md
.github/workflows/: cmake-multi-platform.yml
formatter_ex_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
